SUPPORT-17848 Add overflow-setting to fix overlapping buttons

--- a/bundles/admin/admin-hierarchical-layerlist/resources/css/style.css
+++ b/bundles/admin/admin-hierarchical-layerlist/resources/css/style.css
@@ -100,7 +100,8 @@
       margin-top: 0; }
     .oskari-flyout.admin-hierarchical-layerlist-add-layer div.oskari-flyoutcontentcontainer div.admin-add-layer .input-controls {
       position: relative;
-      margin-right: 5px; }
+      margin-right: 5px;
+      overflow: hidden }
       .oskari-flyout.admin-hierarchical-layerlist-add-layer div.oskari-flyoutcontentcontainer div.admin-add-layer .input-controls.buttons {
         text-align: center; }
         .oskari-flyout.admin-hierarchical-layerlist-add-layer div.oskari-flyoutcontentcontainer div.admin-add-layer .input-controls.buttons button {
